# just-mcp

./: .gitignore  .markdownlint.json  .mcp.json  Brewfile  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_VERIFICATION.md  README.md  dagger.json  justfile  test-utilities.just  test_admin_improvements.sh  test_config_resource.sh  test_justfile
.claude/: settings.json
.dagger/: go.mod  main.go
.github/workflows/: README.md  dagger-ci.yml  dagger-release.yml  release-zigbuild.yml
.serena/: project.yml
.serena/cache/rust/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
.taskmaster/: config.json
assets/docs/: JUSTFILE_BEST_PRACTICES.md
assets/prompts/: do-it.md
benches/: ast_parser_bench.rs
demo/: .gitignore  README.md  justfile
dev-tools/: Cargo.toml
dev-tools/src/: perf_analysis.rs
docs/: CONFIGURATION.md  config-example.json  config-schema.json  embedded_vector_db_review.md  troubleshooting.md  vector_search_libsql_proposal.md  vector_search_qdrant_proposal.md
docs/api/: ast-parser-api.md
docs/architecture/: ast-parser-architecture.md  ultrafast-mcp.md
docs/design/: embedded-content.md  embedded_vector_db_review.md  enhanced-parser-design.md  just-do-it-prompt.md  treesitter-grammar-parser.md  vector_search_libsql_proposal.md  vector_search_qdrant_proposal.md
docs/examples/: real-world-justfiles.md
docs/features/: LOCAL_EMBEDDINGS.md  parser-options.md  vector-search.md
docs/migration/: ast-parser-migration.md
docs/refactor/: justfile-refactor.md
docs/reports/: parsing-errors.md  task-139-performance-optimization.md
docs/tasks/: treesitter-grammar-parser-tasks.md  ultrafast-mcp-tasks.md
just/: common.just  docker.just  release.just  rust.just  setup.just  test-common.just  vector.just
src/: error.rs  lib.rs  main.rs
src/admin/: mod.rs
src/cli/: mod.rs
src/config_resource/: collector.rs  combined_provider.rs  mod.rs  provider.rs
src/embedded_content/: documents.rs  indexer.rs  mod.rs  resources.rs
src/executor/: mod.rs
src/notification/: mod.rs
src/parser/: just_command_parser.rs  mod.rs
src/parser/ast/: cache.rs  errors.rs  mod.rs  nodes.rs  parser.rs  parser_optimized.rs  parser_pool.rs  queries.rs
src/prompts/: confirmation.rs  do_it.rs  mod.rs  registry.rs  search_adapter.rs  templates.rs  traits.rs
src/registry/: mod.rs
src/resource_limits/: mod.rs
src/security/: mod.rs
src/server/: error_adapter.rs  handler.rs  mod.rs  prompts.rs  protocol.rs  resources.rs  transport.rs
src/server_v2/: dynamic_handler.rs  error_adapter.rs  mod.rs  prompts.rs  resources.rs
src/types/: mod.rs
src/vector_search/: embedding.rs  error.rs  integration.rs  libsql_impl.rs  local_embedding.rs  mod.rs  model_cache.rs  types.rs
src/watcher/: mod.rs
tests/: admin_parser_doctor_test.rs  ast_import_test.rs  ast_integration_validation_test.rs  ast_parser_debug_test.rs  ast_parser_default_test.rs  ast_parser_foundation_test.rs  attribute_parsing_test.rs  cli_parser_argument_test.rs  conditional_function_test.rs  config_resource_integration_test.rs  dependency_resolution_test.rs  embedded_content_integration_test.rs  enhanced_parser_integration_test.rs  executor_integration_test.rs  framework_prompt_integration_test.rs  framework_resource_integration_test.rs  integration_test.rs  justfile_parser_test.rs  local_embedding_integration_test.rs  local_embedding_interface_test.rs  mcp_protocol_test.rs  mcp_resources_protocol_test.rs  nested_expressions_edge_case_test.rs  notification_test.rs  parameter_extraction_test.rs  parser_preference_test.rs  recipe_structure_parsing_test.rs  resource_limits_test.rs  security_test.rs  string_interpolation_test.rs  tree_sitter_just_test.rs  vector_search_integration_test.rs  vector_store_test.rs  watcher_integration_test.rs
tests/common/: mod.rs
