[package]
name = "just-mcp"
version = "0.1.2"
edition = "2021"
rust-version = "1.88.0"
authors = ["just-mcp contributors"]
description = "Model Context Protocol server for justfile integration"
repository = "https://github.com/onegrep/just-mcp"
license = "MIT"
readme = "README.md"

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Filesystem monitoring
notify = "6.1"

# Pattern matching for justfile parsing
regex = "1.11"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
sha2 = "0.10"
base64 = "0.22"
shell-escape = "0.1"

# Async trait
async-trait = "0.1"

# HTTP and SSE (for optional HTTP transport)
axum = { version = "0.7", optional = true }
tower = { version = "0.5", optional = true }
hyper = { version = "1.0", optional = true }

# Testing utilities
tempfile = "3.14"
pretty_assertions = "1.4"

# Vector search and database
libsql = { version = "0.6", optional = true }
rusqlite = { version = "0.32", features = ["bundled", "blob"], optional = true }
ndarray = { version = "0.16", optional = true }
sqlite-vss = { version = "0.1", optional = true, features = ["download-libs"] }

# HTTP client for embedding providers
reqwest = { version = "0.12", features = ["json"], optional = true }

# Local embedding model support with Candle
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
hf-hub = { version = "0.3.2", features = ["tokio"], optional = true }
tokenizers = { version = "0.21", optional = true }
dirs = { version = "5.0", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }

# Directory walking for CLI
walkdir = "2.5"

# Tree-sitter for AST parsing
tree-sitter = { version = "0.24", optional = true }
tree-sitter-just = { version = "0.1", optional = true }

[dev-dependencies]
mockall = "0.13"
insta = "1.41"
futures = "0.3"

[build-dependencies]
cc = "1.0"

[features]
default = ["stdio"]
stdio = []
http = ["axum", "tower", "hyper"]
vector-search = ["libsql", "rusqlite", "ndarray", "sqlite-vss", "reqwest"]
local-embeddings = ["candle-core", "candle-nn", "candle-transformers", "hf-hub", "tokenizers", "dirs", "chrono"]
ast-parser = ["tree-sitter", "tree-sitter-just"]
all = ["stdio", "http", "vector-search", "local-embeddings", "ast-parser"]

[[bin]]
name = "just-mcp"
path = "src/main.rs"
